compound seek in a modified Bitmovin Player UI - next step: for slide movements

--- a/compound-seek/bitmovin-basic.html
+++ b/compound-seek/bitmovin-basic.html
@@ -7,9 +7,9 @@
     <title>bitmovin player - demo</title>
     <!--link href="style.css" rel="stylesheet" type="text/css" /-->
 
-    <!--script type="text/javascript" src="https://cdn.bitmovin.com/player/web/8.10.0/bitmovinplayer.js"></script-->
+    <script type="text/javascript" src="https://cdn.bitmovin.com/player/web/8/bitmovinplayer.js"></script>
 
-    <script type="text/javascript" src="bitmovinplayer.js"></script>
+    <!--script type="text/javascript" src="bitmovinplayer.js"></script-->
 
     <script defer src="player-basic.js"></script>
 
